crates/config/tests/snapshots/block_string_multi_folded_keep_emptyln_wsln_none_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-multi-folded-keep-emptyln-wsln-none-eof

## Input

```mical
key >+

  hello
 
  world

```

## JSON

```json
{
  "key": "\nhello\nworld\n"
}
```

vim:ft=markdown
