crates/config/tests/snapshots/block_string_multi_folded_keep_wsln_wsln_emptyln_dedent.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-multi-folded-keep-wsln-wsln-emptyln-dedent

## Input

```mical
key >+
  hello
 
  world

other val

```

## JSON

```json
{
  "key": "hello\nworld\n\n",
  "other": "val"
}
```

vim:ft=markdown
