crates/config/tests/snapshots/block_string_multi_folded_strip_emptyln_emptyln_wsln_eof_nonl.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-multi-folded-strip-emptyln-emptyln-wsln-eof-nonl

## Input

```mical
key >-
  hello

  world
 
```

## JSON

```json
{
  "key": "hello\nworld"
}
```

vim:ft=markdown
