crates/config/tests/snapshots/block_string_multi_folded_strip_none_wsln_emptyln_eof_nonl.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-multi-folded-strip-none-wsln-emptyln-eof-nonl

## Input

```mical
key >-
  hello
 
  world

```

## JSON

```json
{
  "key": "hello\nworld"
}
```

vim:ft=markdown
