crates/config/tests/snapshots/block_string_multi_folded_strip_wsln_none_wsln_dedent.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-multi-folded-strip-wsln-none-wsln-dedent

## Input

```mical
key >-
  hello
  world
 
other val

```

## JSON

```json
{
  "key": "hello world",
  "other": "val"
}
```

vim:ft=markdown
