crates/config/tests/snapshots/block_string_multi_literal_clip_none_wsln_wsln_eof_nonl.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-multi-literal-clip-none-wsln-wsln-eof-nonl

## Input

```mical
key |
  hello
 
  world
 
```

## JSON

```json
{
  "key": "hello\n\nworld\n"
}
```

vim:ft=markdown
