crates/config/tests/snapshots/block_string_multi_literal_clip_wsln_wsln_none_dedent.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-multi-literal-clip-wsln-wsln-none-dedent

## Input

```mical
key |
 
  hello
 
  world
other val

```

## JSON

```json
{
  "key": "\nhello\n\nworld\n",
  "other": "val"
}
```

vim:ft=markdown
