crates/config/tests/snapshots/block_string_multi_literal_keep_none_emptyln_wsln_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-multi-literal-keep-none-emptyln-wsln-eof

## Input

```mical
key |+
  hello

  world
 

```

## JSON

```json
{
  "key": "hello\n\nworld\n\n"
}
```

vim:ft=markdown
