crates/config/tests/snapshots/block_string_multi_literal_keep_wsln_none_none_eof_nonl.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-multi-literal-keep-wsln-none-none-eof-nonl

## Input

```mical
key |+
 
  hello
  world
```

## JSON

```json
{
  "key": "\nhello\nworld\n"
}
```

vim:ft=markdown
