crates/config/tests/snapshots/block_string_multi_literal_strip_emptyln_none_emptyln_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-multi-literal-strip-emptyln-none-emptyln-eof

## Input

```mical
key |-
  hello
  world


```

## JSON

```json
{
  "key": "hello\nworld"
}
```

vim:ft=markdown
