crates/config/tests/snapshots/block_string_multi_literal_strip_none_none_none_dedent.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-multi-literal-strip-none-none-none-dedent

## Input

```mical
key |-
  hello
  world
other val

```

## JSON

```json
{
  "key": "hello\nworld",
  "other": "val"
}
```

vim:ft=markdown
