crates/config/tests/snapshots/block_string_nested_edge_cases.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-nested-edge-cases

## Input

```mical
  key |
    content
  sibling val

```

## JSON

```json
{
  "key": "content\n",
  "sibling": "val"
}
```

vim:ft=markdown
